--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@vercel/analytics": "^1.2.2",
     "next": "14.1.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
